Random fixes and changes
